--- a/confirm.html
+++ b/confirm.html
@@ -13,11 +13,15 @@
 
 <body>
     <div id="wrapper">
-        <a class="back_btn" href="index.html">←買い物に戻る</a>
+        <div class="button008" class="back_btn">
+            <a href="index.html">買い物に戻る</a>
+        </div>
         <div class="conteiner">
             <h1>購入確認</h1>
+
             <ul id="js_shopping_list" class="shopping_list">
             </ul>
+            <div class="image"></div>
             <div class="total">
                 <span class="yen_symbol">¥</span>
                 <span id="js_total"></span>
@@ -26,7 +30,7 @@
         </div>
     </div>
 
-    
+
 </body>
 
 </html>
