--- a/index.html
+++ b/index.html
@@ -70,9 +70,24 @@
                         <br>
                         <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">8,000</span>
                         </div>
+                        <!-- <div class="quantity">
+                            <button class="plus-btn" type="button" name="button"></button>
+                            <input type="text" name="name" value="1">
+                            <button class="minus-btn" type="button" name="button"></button>
+                        </div> -->
+                        <!-- <p class="mb5">数量：<span id="span1"></span></p>
+                        <form action="" method="post"  class="item_cart_btn js_cart_btn" data-name="ティー" data-price="8000" name="cart-example">
+                            <select name="select_num" class="selectnum">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                            </select> -->
                         <div class="item_btnarea">
+                            <!-- <input type="button" value="カートに入れる" onclick="clickBtn()" /> -->
                             <button class="item_cart_btn js_cart_btn" data-name="ティー" data-price="8000">カート</button>
-                            <a class="item_buy_btn" href="confirm.html">購入</a>
+                            <a class="item_buy_btn js_buy_btn" href="confirm.html">購入</a>
                         </div>
                     </div>
                 </li>
@@ -87,11 +102,22 @@
                         <br>
                         <div class="item_price"><span class="yen_symbol">¥</span><span class="js_get_price">500</span>
                         </div>
-                        <div class="item_btnarea">
-                            <button class="item_cart_btn js_cart_btn" data-name="バイロンベイクッキー"
-                                data-price="500">カート</button>
-                            <a class="item_buy_btn" href="confirm.html">購入</a>
-                        </div>
+                        <!-- <p class="mb5">数量：</p>
+                        <form action="" method="post" class="item_cart_btn js_cart_btn" data-name="バイロンベイクッキー"
+                            data-price="500" name="cart-example">
+                            <select name="select-num" class="selectnum">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                            </select>
+                            <input name="sku-code" type="hidden" value=""> -->
+                            <div class="item_btnarea">
+                                <button class="item_cart_btn js_cart_btn" data-name="バイロンベイクッキー"
+                                data-price="500">カート</button> 
+                                <a class="item_buy_btn" href="confirm.html">購入</a>
+                            </div>
                     </div>
                 </li>
                 <li class="item">
